name:                pipes-progress-examples
version:             0.1.0.0
synopsis:            Examples for the pipes-progress library
homepage:            https://github.com/jonathanknowles/pipes-progress-examples
license:             BSD3
license-file:        LICENCE
author:              Jonathan Knowles
copyright:           Jonathan Knowles
maintainer:          mail@jonathanknowles.net
category:            Data
build-type:          Simple
cabal-version:       >=1.10
-- description:
-- extra-source-files:

library
    exposed-modules:
        Crypto.Hash.SHA256.Extra
        Data.Time.Human
        Pipes.Extra
        Pipes.Nested
        Pipes.Progress.Examples
        Text.Pretty
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.8 && <4.9,
        bytestring,
        cryptohash,
        foldl,
        lens-family-core,
        monad-control,
        mtl,
        pipes,
        pipes-bytestring,
        pipes-filesystem,
        pipes-group,
        pipes-progress,
        pipes-safe,
        text,
        unix
    hs-source-dirs:
        library
    default-language:
        Haskell2010
    ghc-options:
        -O3
        -threaded
        -rtsopts
        -fprof-auto
        -with-rtsopts=-N

executable              pipes-progress-examples
    main-is:            Main.hs
    build-depends:
        base >=4.8 && <4.9,
        pipes,
        pipes-progress,
        pipes-progress-examples,
        pipes-safe,
        transformers,
        unix
    hs-source-dirs:      executable
    default-language:    Haskell2010
    ghc-options:
        -O3
        -threaded
        -rtsopts
        -with-rtsopts=-N

executable              pipes-progress-examples-profiled
    main-is:            Main.hs
    build-depends:
        base >=4.8 && <4.9,
        pipes,
        pipes-progress,
        pipes-progress-examples,
        pipes-safe,
        unix
    hs-source-dirs:      executable
    default-language:    Haskell2010
    ghc-options:
        -O3
        -threaded
        -rtsopts
        -fprof-auto
        "-with-rtsopts=-N -p -s -h -i0.1"
